--- a/project_rest/frontend/src/App.css
+++ b/project_rest/frontend/src/App.css
@@ -1,7 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body{
-  background: rgb(21, 36, 83);
+  /* background: rgb(21, 36, 83); */
+  /* background: rgb(255, 255, 255); */
+  background: linear-gradient( 135deg, #90F7EC 10%, #32CCBC 100%) fixed;
   /* background: linear-gradient(90deg, rgb(217, 54, 149) 0%, rgb(227, 143, 235) 43%, rgb(237, 206, 245) 100%); */
 }
+
 
 h1, h2, h3, h4, h5, p, span, strike{
   font-family: 'Montserrat', sans-serif;
@@ -20,6 +27,11 @@ h1, h2, h3, h4, h5, p, span, strike{
   justify-content: space-around;
   align-items: flex-start;
 
+  border-radius: 1.5rem;
+
+  padding-bottom: 0.25rem;
+
+
 }
 
 #form-wrapper{
@@ -30,25 +42,30 @@ h1, h2, h3, h4, h5, p, span, strike{
   background-color: #fff;
   box-shadow: 0 3px 8px rgba(0,0,0,0.15);
   padding:30px;
+  border-radius: 1.5rem;
 }
 
 #submit{
-  background-color: #36d9b6;
+  background-image: linear-gradient( 135deg, #EE9AE5 10%, #5961F9 100%);
   border-radius: 7px;
   border:0;
+  margin-left: 2rem;
   color: #fff;
 }
 
 .flex-wrapper{
   display: flex;
+  border-radius: 1.5rem;
+  
 }
 
 .task-wrapper{
     cursor: pointer;
     border-bottom: 1px solid  #e9e9e9;
     color: #686868;
-    margin:5px;
     padding:20px;
+    border-radius: 1.5rem;
+    margin: 0.50rem;
 }
 
 .task-wrapper:hover{
